// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SavedBlock Snapshots Render Icon 1`] = `
<div
  class="brz-ed-tooltip__content"
  title="Save"
>
  <div
    class="brz-ed-toolbar__item__tooltip"
  >
    Saved
  </div>
  <svg
    class="brz-icon-svg brz-ed-icon-svg align-[initial] brz-ed-animated brz-ed-animated--fadeIn"
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g
      fill="currentColor"
      fill-rule="nonzero"
      transform="translate(-86 -419)"
    >
      <g
        transform="translate(47)"
      >
        <g
          transform="translate(0 78)"
        >
          <g
            transform="translate(0 328)"
          >
            <g
              transform="translate(39 11)"
            >
              <g
                transform="translate(0 1)"
              >
                <path
                  d="M14.682 2.318a4.5 4.5 0 00-6.364 0c-.121.121-.214.259-.318.389-.104-.13-.197-.268-.318-.389a4.5 4.5 0 00-6.364 6.364L8 15l6.682-6.318a4.5 4.5 0 000-6.364z"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Test SavedBlock Snapshots Render loader 1`] = `
<div
  class="brz-ed-tooltip__content"
  title="Save"
>
  <svg
    class="brz-icon-svg brz-ed-icon-svg align-[initial] brz-ed-animated--spin"
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g>
        <g>
          <path
            class="cls-1"
            d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,2a6,6,0,1,0,6,6A6,6,0,0,0,8,2Z"
            fill="currentColor"
            style="opacity: 0.4;"
          />
          <path
            d="M16,8H14A6,6,0,0,0,8,2V0A8,8,0,0,1,16,8Z"
            fill="currentColor"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;
